<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Gestion</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="lblUsuario">Usuario</string>
    <string name="lblContrasenia">Contraseña</string>
    <string name="Login">Login</string>
    <string name="cancel">Cancel</string>
    <string name="lblBuscar">Buscar</string>
    <string name="msgErrorLogin">Error!!</string>
    <string name="activo">Activo</string>
    <string name="inactivo">Inactivo</string>
    <string name="domicilio">Domicilio</string>
    <string name="nombre">Nombre o Razon Social</string>
    <string name="telefono">Telefono</string>
    <string name="Localidad">Localidad</string>
    <string name="Provincia">Provincia</string>
     <string name="Registrarse">Registrarse</string>

</resources>