<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="BIENVENIDO!!" />

    <TextView
        android:id="@+id/lblNombre"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/nombre" />

    <EditText
        android:id="@+id/txtNombre"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <TextView
        android:id="@+id/lblDomicilio"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/domicilio" />

    <EditText
        android:id="@+id/txtDomicilio"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />
    
      <TextView
        android:id="@+id/lblTelefono"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/telefono" />

    <EditText
        android:id="@+id/txtTelefono"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <TextView
        android:id="@+id/lblProvincia"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Localidad" />

    <Spinner
        android:id="@+id/spnProvincia"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />
    
     <TextView
        android:id="@+id/lblProvincia"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Localidad" />

    <Spinner
        android:id="@+id/spnLocalidad"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />
    

   
</LinearLayout>